@@ -35,7 +35,7 @@ File::Temp
 )
 HTML::Entities
 LWP::Simple
-Module::Build (version 0.18 or later)
+Module::Build (version 0.26 or later)
 Parse::RecDescent
 Plucene
 POSIX
